# bevy_platformer

./: Cargo.toml  LICENSE  README.md
assets/: main.ess
assets/Animations/: Collectables.san.ron  Guy.san.ron  Mask.san.ron  Ninja.san.ron  Pink.san.ron  Terrain.san.ron
assets/Levels/: test.lvl.ron
src/: animation.rs  editor.rs  ghost.rs  main.rs  menu.rs  player.rs  tile_map.rs  user_input.rs
src/animation/: loader.rs  mod.rs
src/map/: collectable.rs  levels.rs  mod.rs  square.rs  test.lvl.ron  tile_map.rs
