[package]
name = "bevy_platformer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.11.0", features = ["serialize"]}
bevy-inspector-egui = "0.19.0"
bevy_editor_pls = {git = "https://github.com/jakobhellermann/bevy_editor_pls.git"}
rand = "0.8"
leafwing-input-manager = "0.10"
bevy_rapier2d = "0.22"
#bevy-inspector-egui-rapier = { version = "0.9.0", features = ["rapier2d"]}
serde = "1"
ron = "0.8"
bincode = "*"
base64 = "*"
anyhow = "*"
cli-clipboard = "0.4.0"
belly = {git="https://github.com/PhaestusFox/belly.git"}

[profile.dev.package."*"]
opt-level = 3